--- a/app/scss/_menu.scss
+++ b/app/scss/_menu.scss
@@ -3,7 +3,9 @@
   justify-content: space-between;
   position: relative;
   margin-top: 10px;
+  margin-bottom: 0;
   padding: 0;
+  border-top: 1px solid gray;
 
   &__item {
     position: relative;
@@ -20,27 +22,9 @@
 
     &>span {
       position: relative;
-      font-family: 'HelveticaBold', serif;
-      text-transform: uppercase;
-      font-size: 14px;
-
-      &:after {
-        content: '';
-        width: 100%;
-        height: 4px;
-        background-color: $accent;
-        position: absolute;
-        bottom: 0px;
-        left: 50%;
-        transform: translate(-50%, 0);
-        opacity: 0;
-        transition: all 0.3s ease;
-      }
-
-      &:hover:after {
-        opacity: 1;
-        transition: all 0.3s ease;
-      }
+      font-family: 'corbel-bold';
+      text-transform: capitalize;
+      font-size: 15px;
     }
   }
 }
@@ -55,6 +39,7 @@
     padding: 0;
     border: 0;
     cursor: pointer;
+    background-color: transparent;
 
     &>span {
       position: absolute;
