--- a/app/scss/_menu.scss
+++ b/app/scss/_menu.scss
@@ -23,6 +23,7 @@
     &>span {
       position: relative;
       font-family: 'corbel-bold';
+      font-weight: 700;
       text-transform: capitalize;
       font-size: 15px;
     }
