--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,5 @@
-$default-font: "roboto-example", sans-serif;
-$accent: orange;
-$text: #333;
+$standart-color: #8a244c;
+$hover-color: #65042a;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
