--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -1,5 +1,5 @@
 .btn {
-    background-color: #6f0730;
+    background-color: $standart-color;
     border: none;
     border-radius: 40px;
     text-transform: uppercase;
@@ -13,7 +13,7 @@
     height: 45px;
     transition: all 0.5s ease;
     &:hover{
-        background-color: #65042a;
+        background-color: $hover-color;
         box-shadow: 0px 5px 9px 0px #65042a;
     }
 }
@@ -22,7 +22,7 @@
     display: none;
 }
 
-.big__title {
+.title__big {
     font-family: 'lora-regular';
     font-size: 50px;
     font-weight: 400;
@@ -42,6 +42,101 @@
     }
 }
 
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    &__item {
+
+    }
+}
+
+.card {
+    border-radius: 25px;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+
+    &:hover {
+        border: 1px solid $standart-color;
+    }
+
+    &__img {
+        width: 100%;
+        overflow: hidden;
+        max-height: 200px;
+        background-color: #fff;
+
+        & img {
+            display: block;
+            margin: 0 auto;
+        }
+    }
+
+    &__info {
+        padding: 20px;
+
+        & h3 {
+            margin-bottom: 20px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            line-height: 20px;
+            max-height: 40px;
+        }
+
+        & span {
+            font-size: 18px;
+            display: block;
+            margin-bottom: 15px;
+        }
+
+        & p {
+            font-size: 18px;
+            line-height: 30px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 5;
+            max-height: 150px;
+        }
+
+        button {
+            margin-top: 50px;
+            bottom: 20px;
+            position: absolute;
+        }
+    }
+}
+
+.articles {
+    &__title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 70px;
+    }
+    &__header {
+        font-family: corbel-bold;
+        color: $standart-color;
+        font-size: 18px;
+        text-transform: uppercase;
+    }
+    &__date,
+    &__text {
+        font-family: corbel-regular;
+    }
+    &__card {
+        height: 600px;
+    }
+}
+
 main {
     padding-top: 125px;
 }
@@ -52,40 +147,38 @@ main {
 
 .section-title {
     text-align: center;
-    margin-bottom: 80px;
-}
-
-.main-divider {
-    padding: 100px 0;
-    background-image: url('../img/_src/main-img.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    &__content {
-        display: flex;
-        flex-direction: column;
-        max-width: 700px;
-        color: #fff;
-        & span,
-        & p {
-            font-family: 'lora-regular';
-        }
-        & span {
-            font-size: 40px;
-            margin-bottom: 20px;
-        }
-
-        & p {
-            font-size: 15px;
-            margin-bottom: 90px;
-            line-height: 30px;
-        }
-    }
+    margin-bottom: 70px;
 }
 
 .main {
+
+    &-divider {
+        padding: 100px 0;
+        background-image: url('../img/_src/main-img.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        &__content {
+            display: flex;
+            flex-direction: column;
+            max-width: 700px;
+            color: #fff;
+            & span {
+                font-size: 40px;
+                margin-bottom: 20px;
+                font-family: 'lora-regular';
+            }
+
+            & p {
+                font-size: 20px;
+                margin-bottom: 90px;
+                line-height: 30px;
+                font-family: 'corbel-regular';
+            }
+        }
+    }
 
     &-about {
 
@@ -101,8 +194,12 @@ main {
         }
     }
 
-
     &-advantages {
+        background-color: $standart-color;
+
+        & * {
+            color: #ffffff;
+        }
 
         &__item {
             display: flex;
@@ -112,20 +209,81 @@ main {
 
         &__dish {
             &-wrapper {
-                width: 170px;
-                height: 170px;
+                width: 160px;
+                height: 160px;
+                margin-bottom: 50px;
+                box-shadow: 0 1px 40px 0px #000;
                 border-radius: 50%;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-image: url('../img/_src/dish.png');
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                &:before {
+                    content: '';
+                    width: 67px;
+                    height: 67px;
+                    background-image: url("../img/_src/sprite.png");
+                }
             }
         }
 
-        &__title {
+        &__text {
             width: 100%;
             display: block;
             text-align: center;
+            font-family: 'corbel-regular';
+            font-size: 18px;
+            line-height: 30px;
+
         }
 
+        &__img-1:before {
+            background-position: -6px 68px;
+        }
+
+        &__img-2:before {
+            background-position: -98px 68px;
+        }
+
+        &__img-3:before {
+            background-position: -189px 68px;
+        }
+        &__img-4:before {
+            background-position: -277px 68px;
+        }
+    }
+
+    &-categories {
+        &__item {
+            padding: 40px 60px;
+            width: 33.3%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            &:nth-child(odd) {
+                background-color: $standart-color;
+            }
+            &:nth-child(even) {
+                background-color: $hover-color;
+            }
+            & img {
+                width: 100%;
+            }
+        }
+        &__title {
+            padding-bottom: 10px;
+            font-size: 17px;
+            color: #ffffff;
+            text-align: center;
+        }
+    }
+
+    &-articles {
+        padding-bottom: 70px;
     }
 }
