--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,11 +1,10 @@
 @import "vars";
 @import "fonts";
 @import "libs";
-@import "common";
-
 
 @import "header";
 @import "menu";
+@import "common";
 
-
+@import "footer";
 @import "media"; // Always at the end
