--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -79,6 +79,14 @@
     &__info {
         padding: 20px;
 
+        & a {
+            color: #000;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+
         & h3 {
             margin-bottom: 20px;
             overflow: hidden;
