--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,12 +1,15 @@
 .footer {
   padding: 20px 0 40px;
+  background-color: #f5f5f5;
   &__img {
 
   }
   &__ul{
+    font-size: 14px;
     line-height: 32px;
+    padding-bottom: 15px;
+    padding-left: 0;
     margin: 0;
-    padding: 0;
     list-style-type: none;
   }
 }
