--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -1,20 +1,37 @@
+body {
+    background-color: #fcfcfc;
+}
+
 .btn {
-    background-color: $standart-color;
     border: none;
     border-radius: 40px;
     text-transform: uppercase;
     cursor: pointer;
-    color: white;
     font-size: 14px;
+    transition: all 0.5s ease;
 }
 
 .btn__standart {
+    background-color: $standart-color;
+    color: white;
     width: 225px;
     height: 45px;
-    transition: all 0.5s ease;
     &:hover{
         background-color: $hover-color;
         box-shadow: 0px 5px 9px 0px #65042a;
+    }
+}
+
+.btn__white {
+    background-color: #ffffff;
+    color: $standart-color;
+    width: 225px;
+    height: 45px;
+    border: 1px solid $standart-color;
+    &:hover{
+        background-color: $hover-color;
+        box-shadow: 0px 5px 9px 0px #65042a;
+        color: #ffffff;
     }
 }
 
@@ -45,7 +62,6 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     &__item {
 
     }
@@ -53,16 +69,13 @@
 
 .card {
     border-radius: 25px;
-    background-color: #f5f5f5;
+    background-color: $gray-color;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     overflow: hidden;
-
-    &:hover {
-        border: 1px solid $standart-color;
-    }
+    border: 1px solid #ffffff;
 
     &__img {
         width: 100%;
@@ -73,6 +86,7 @@
         & img {
             display: block;
             margin: 0 auto;
+            width: 100%;
         }
     }
 
@@ -124,24 +138,72 @@
 }
 
 .articles {
+
+    &-cards {
+        justify-content: space-between;
+    }
+    &-card {
+        max-width: 350px;
+        height: 600px;
+        &:hover {
+            border: 1px solid $standart-color;
+        }
+        &__header {
+            font-family: corbel-bold;
+            color: $standart-color;
+            font-size: 18px;
+            text-transform: uppercase;
+        }
+        &__date,
+        &__text {
+            font-family: corbel-regular;
+        }
+    }
     &__title {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding-bottom: 70px;
     }
-    &__header {
-        font-family: corbel-bold;
+
+
+}
+
+.product {
+    &-cards {
+        justify-content: space-between;
+    }
+    &-card {
+        background-color: #ffffff;
+        max-width: 260px;
+        max-height: 290px;
+        &:hover {
+            border: 1px solid $standart-color;
+        }
+        &__title {
+            font-family: 'corbel-regular';
+            font-size: 18px;
+            color: $standart-color;
+        }
+    }
+}
+
+.breadcrumbs {
+    display: flex;
+    padding-bottom: 40px;
+    & a {
+        font-family: 'corbel-regular';
+
+        &:not(:last-child) {
+            cursor: pointer;
+            &:after {
+                content: '>';
+            }
+        }
+    }
+    &__main {
         color: $standart-color;
-        font-size: 18px;
-        text-transform: uppercase;
-    }
-    &__date,
-    &__text {
-        font-family: corbel-regular;
-    }
-    &__card {
-        height: 600px;
+
     }
 }
 
@@ -149,8 +211,33 @@ main {
     padding-top: 125px;
 }
 
+::-webkit-input-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+::-moz-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+:-moz-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+:-ms-input-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+
 .section-padding {
     padding: 70px 0;
+
+    &__first {
+        padding: 40px 0 70px;
+    }
 }
 
 .section-title {
@@ -158,21 +245,30 @@ main {
     margin-bottom: 70px;
 }
 
+.divider {
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-repeat: no-repeat;
+    &__content {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+        margin: 0;
+        & img {
+            width: 100%;
+        }
+    }
+}
+
 .main {
 
     &-divider {
-        padding: 100px 0;
         background-image: url('../img/_src/main-img.jpg');
-        background-repeat: no-repeat;
         background-size: cover;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         &__content {
-            display: flex;
-            flex-direction: column;
             max-width: 700px;
-            color: #fff;
             & span {
                 font-size: 40px;
                 margin-bottom: 20px;
@@ -293,5 +389,153 @@ main {
 
     &-articles {
         padding-bottom: 70px;
+    }
+}
+
+.product {
+    &-divider {
+        padding-top: 50px;
+
+        &__content {
+            max-width: 700px;
+            margin: 0 auto;
+        }
+
+        &__btn {
+            position: relative;
+            padding: 12px;
+            &:before {
+                content: '';
+                position: absolute;
+                left: 35px;
+                border-right: 3px solid;
+                border-bottom: 3px solid;
+                height: 12px;
+                top: 50%;
+                width: 12px;
+                -webkit-transform: rotate(-45deg);
+                -ms-transform: rotate(-45deg);
+                transform: rotate(135deg) translateY(75%);
+            }
+        }
+    }
+    &-describe {
+        background-color: $gray-color;
+        &__card {
+            align-items: flex-start;
+            background-color: #ffffff;
+            padding: 30px 0;
+            border: none;
+
+            & h2, p, table, span {
+                width: 100%;
+                padding-left: 25px;
+                padding-right: 25px;
+            }
+        }
+        &__title {
+            color: $standart-color;
+            font-size: 35px;
+            padding-bottom: 30px;
+            margin: 0;
+        }
+        &__text {
+            font-family: 'corbel-regular';
+            line-height: 26px;
+            margin-bottom: 20px;
+        }
+        &__notification {
+            margin-top: 15px;
+            color: #505050;
+        }
+        &__sertificat {
+            padding-left: 65px;
+            & span {
+                display: block;
+                text-decoration: underline;
+                font-family: 'corbel-regular';
+            }
+            &:before {
+                background-position: 138px -50px;
+                background-image: url(../img/_src/sprite.png);
+                width: 60px;
+                height: 50px;
+            }
+        }
+
+        & table tr:first-child {
+            background-color: #f0eeee;
+            & th {
+                padding: 10px 0;
+            }
+        }
+        & table tr:nth-child(2) td {
+            padding-top: 15px;
+        }
+        & table tr td:first-child,
+        & table tr th:first-child{
+            padding-left: 25px;
+        }
+        & table tr td {
+            padding: 5px 0;
+        }
+    }
+}
+
+.sertificats {
+    &-cards {
+        justify-content: space-between;
+    }
+    &-card {
+        max-width: 270px;
+        background-color: transparent;
+
+        &__title {
+            font-family: 'corbel-regular';
+            font-size: 16px;
+            color: #131d28;
+            text-align: center;
+        }
+
+        & .card__info {
+            padding-top: 5px;
+        }
+    }
+    &__search {
+        max-width: 540px;
+        height: 40px;
+        border-radius: 25px;
+        border: 1px solid $standart-color;
+        position: relative;
+        margin-bottom: 70px;
+
+        & input {
+            border: none;
+            background-color: transparent;
+            position: relative;
+            outline: none;
+            width: 100%;
+            height: 100%;
+            padding: 0 50px 0 20px;
+        }
+        &-img {
+            width: 40px;
+            height: 40px;
+            background-color: $standart-color;
+            position: absolute;
+            right: 0;
+            top:50%;
+            transform: translateY(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &:before {
+                content: '';
+                background-image: url(../img/_src/sprite.png);
+                background-position: -77px -4px;
+                width: 25px;
+                height: 25px;
+            }
+        }
     }
 }
