--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,5 @@
 $standart-color: #8a244c;
+$gray-color: #f5f5f5;
 $hover-color: #65042a;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
