--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -2,6 +2,12 @@ body {
     background-color: #fcfcfc;
 }
 
+a {
+    &:focus {
+        outline: none;
+    }
+}
+
 .btn {
     border: none;
     border-radius: 40px;
@@ -106,6 +112,10 @@ body {
             display: block;
             margin: 0 auto;
             width: 100%;
+            &:focus {
+                outline: none;
+            }
+
         }
     }
 
@@ -164,6 +174,7 @@ body {
     &-card {
         max-width: 350px;
         height: 600px;
+        margin-bottom: 25px;
         &:hover {
             border: 1px solid $standart-color;
         }
@@ -226,6 +237,52 @@ body {
 
         &:last-child {
             padding-bottom: 0;
+        }
+    }
+}
+
+.pagination {
+    padding-top: 55px;
+    &__list {
+        display: flex;
+        max-width: 550px;
+        justify-content: space-between;
+        list-style-type: none;
+        margin: 0 auto;
+        padding-left: 0;
+    }
+    &__item {
+        text-align: center;
+        padding: 10px;
+        &:not(:first-child):not(:last-child) {
+            width: 40px;
+            height: 40px;
+        }
+        &:first-child,
+        &:last-child{
+            width: 80px;
+            height: 40px;
+        }
+    }
+}
+
+.form {
+    &__label {
+        border-radius: 25px;
+        border: 1px solid #9e9e9e;
+        width: 100%;
+        height: 50px;
+        position: relative;
+        margin-bottom: 40px;
+        & input {
+            border: none;
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            padding-left: 20px;
+            &:focus {
+                outline: none;
+            }
         }
     }
 }
@@ -583,5 +640,58 @@ main {
                 font-weight: 400;
             }
         }
+    }
+}
+
+.catalog {
+    &-divider {
+        padding-top: 0;
+        padding-bottom: 0;
+        & img {
+            width: 100%;
+        }
+    }
+    &-title {
+        margin: 0;
+    }
+
+    &-slider {
+        padding-top: 80px;
+    }
+}
+
+.contacts {
+    &__info {
+        & span {
+            margin-bottom: 30px;
+        }
+    }
+    &__map {
+        border-radius: 25px;
+        overflow: hidden;
+    }
+    &__active-reg {
+        & img {
+            width: 100%;
+        }
+    }
+}
+
+.slick-slide {
+    &>div {
+        text-align: center;
+    }
+}
+
+.slider-header {
+    display: flex;
+    align-items: center;
+}
+
+.prev-arrow,
+.next-arrow {
+    &:active,
+    &:focus{
+        outline: none;
     }
 }
