--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,6 +1,8 @@
-@import "../libs/bootstrap/scss/bootstrap-reboot.scss";
-@import "../libs/bootstrap/scss/bootstrap-grid.scss";
-@import "../libs/bootstrap/scss/utilities/_sizing.scss";
+// @import "../libs/bootstrap/scss/bootstrap-reboot.scss";
+// @import "../libs/bootstrap/scss/bootstrap-grid.scss";
+// @import "../libs/bootstrap/scss/utilities/_sizing.scss";
+// @import "../libs/bootstrap/scss/_modal.scss";
+@import "../libs//bootstrap/scss/bootstrap.scss";
 @import "../libs/slick/slick.css";
 @import "../libs/slick/slick-theme.css";
 
