--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -60,6 +60,13 @@
     .main-categories__title {
         font-size: 15px;
     }
+    .section-padding {
+        padding: 50px 0;
+    }
+    .title__big {
+        margin-bottom: 50px;
+        font-size: 25px;
+    }
 }
 
 // ≥768px
@@ -109,6 +116,13 @@
         width: 135px;
         height: 35px;
     }
+    .section-padding {
+        padding: 30px 0;
+    }
+    .title__big {
+        margin-bottom: 30px;
+        font-size: 22px;
+    }
 }
 
 // ≥576px
@@ -133,6 +147,13 @@
                 height: 30px;
             }
         }
+    }
+    .section-padding {
+        padding: 20px 0;
+    }
+    .title__big {
+        margin-bottom: 20px;
+        font-size: 20px;
     }
 }
 
