--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -10,18 +10,23 @@ a {
 
 .btn {
     border: none;
+    outline: none;
     border-radius: 40px;
     text-transform: uppercase;
     cursor: pointer;
     font-size: 14px;
     transition: all 0.5s ease;
+    &:focus,
+    &:active {
+        outline: none;
+    }
 }
 
 .btn__standart {
     background-color: $standart-color;
     color: white;
     width: 225px;
-    height: 45px;
+    height: 53px;
     &:hover{
         background-color: $hover-color;
         box-shadow: 0px 5px 9px 0px #65042a;
@@ -32,13 +37,18 @@ a {
     background-color: #ffffff;
     color: $standart-color;
     width: 225px;
-    height: 45px;
+    height: 53px;
     border: 1px solid $standart-color;
     &:hover{
         background-color: $hover-color;
         box-shadow: 0px 5px 9px 0px #65042a;
         color: #ffffff;
     }
+}
+
+.btn__menu-mobile {
+    width: 200px;
+    height: 40px;
 }
 
 .btn-hidden {
@@ -49,6 +59,10 @@ a {
     font-family: 'lora-regular';
     font-size: 50px;
     font-weight: 400;
+}
+
+.hidden {
+    display: none;
 }
 
 .list__item-img {
@@ -200,6 +214,9 @@ a {
 }
 
 .product {
+    &-divider {
+        background-color: white;
+    }
     &-cards {
         justify-content: space-between;
     }
@@ -268,7 +285,7 @@ a {
 
 .form {
     &__label {
-        border-radius: 25px;
+        border-radius: 40px;
         border: 1px solid #9e9e9e;
         width: 100%;
         height: 50px;
@@ -309,30 +326,69 @@ a {
 }
 
 .modal {
-    &-header {
-        & h5 {
-            text-align: center;
-            width: 100%;
-            margin-top: 25px;
-        }
+    &-content {
+        border-radius: 25px;
+    }
+    &-body {
+        text-align: center;
+    }
+    &-label {
+        max-width: 300px;
+        height: 57px;
+        margin-bottom: 20px;
+        background-color: #e2e3e3;
+        border: none;
+    }
+    &-submit {
+        max-width: 300px;
+        height: 57px;
+        font-weight: 700;
+        margin-bottom: 45px;
+    }
+    &-disclaimer {
+        text-align: left;
+        padding: 0 20px 40px;
 
-        & .close {
-            margin: 0;
-            padding: 0;
-            position: absolute;
-            right: 10px;
-            top: 5px;
-            width: 25px;
-            height: 25px;
-            opacity: 1;
-            border-radius: 50%;
-            background-color: $standart-color;
-            color: #fff;
-            line-height: 0;
-            font-size: 18px;
-            font-weight: normal;
-            text-shadow: none;
+        & p {
+            font-size: 12px;
         }
+    }
+
+    &-header {
+        border-bottom: none;
+        margin-bottom: 40px;
+        & .close {
+            position: absolute;
+            right: 30px;
+            top: 30px;
+            background-image: url(../img/_src/close-btn.png);
+            text-shadow: none;
+            border: none;
+            background-repeat: no-repeat;
+            background-size: contain;
+            & span {
+                display: none;
+            }
+        }
+    }
+    &-title {
+        text-align: center;
+        width: 100%;
+        margin-top: 25px;
+        font-family: 'Ubuntu';
+    }
+}
+
+.to-top {
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    width: 90px;
+    height: 90px;
+    cursor: pointer;
+    z-index: 999;
+    & img {
+        width: 100%;
     }
 }
 
@@ -445,7 +501,6 @@ main {
                 width: 160px;
                 height: 160px;
                 margin-bottom: 50px;
-                box-shadow: 0 1px 40px 0px #000;
                 border-radius: 50%;
                 background-repeat: no-repeat;
                 background-position: center;
@@ -454,6 +509,12 @@ main {
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                transition: all 0.5s ease;
+                cursor: pointer;
+
+                &:hover {
+                    box-shadow: 0 1px 40px 0px #000;
+                }
 
                 &:before {
                     content: '';
@@ -497,6 +558,12 @@ main {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            cursor: pointer;
+            transition: all 0.5s ease;
+
+            &:hover {
+                box-shadow: inset 0 1px 40px 0 #000;
+            }
 
             &:nth-child(odd) {
                 background-color: $standart-color;
@@ -726,6 +793,116 @@ main {
     &__active-reg {
         & img {
             width: 100%;
+        }
+    }
+}
+
+.about {
+
+    & p,
+    & li {
+        font-family: 'corbel-regular';
+    }
+
+    &__info{
+        * {
+            line-height: 26px;
+        }
+
+        &-left-img {
+            display: inline-block;
+        }
+        & img {
+            float: left;
+            width: 460px;
+            height: 360px;
+            padding-right: 20px;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+        h2 {
+            margin: 60px 0 50px;
+            color: #8a244c;
+            font-size: 35px;
+            font-weight: 400;
+            font-family: 'lora-regular';
+        }
+        h3 {
+            margin: 35px 0px;
+            font-family: 'corbel-bold';
+            color: $standart-color;
+            font-size: 24px;
+        }
+    }
+    &__ul-1{
+        list-style: none;
+        padding-left: 0;
+
+        & li {
+            position: relative;
+            padding-left: 25px;
+            margin-bottom: 20px;
+            &:before{
+                content: "";
+                position: absolute;
+                left: 0;
+                background-image: url("../img/_src/sprite.png");
+                width: 17px;
+                height: 19px;
+                background-position: -109px -4px;
+            }
+        }
+    }
+    &__ul-2{
+        list-style: none;
+        padding-left: 0;
+        counter-reset: counter;
+
+        & li{
+            list-style-position: inside;
+            counter-increment: counter;
+            margin-bottom: 20px;
+            &:before {
+                content: counter(counter);
+                font-family: 'lora-regular';
+                font-weight: 700;
+                color: $standart-color;
+                font-size: 18px;
+                padding-right: 10px;
+            }
+        }
+    }
+    &__video{
+        border-right: none;
+        border-left: none;
+        position: relative;
+        margin-top: 50px;
+        cursor: pointer;
+        & video{
+            width: 650px;
+        }
+        &-container{
+            position: relative;
+            bottom: 0%;
+            left: 0%;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            text-align: center;
+        }
+        &-btn-play{
+            width: 127px;
+            height: 92px;
+            background-image: url('../img/_src/play-btn.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 99;
+            cursor: pointer;
         }
     }
 }
