--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -16,9 +16,6 @@
 
 // ≥992px
 @include media-breakpoint-down(md) {
-    main {
-        padding-top: 170px;
-    }
     table {
         font-size: 14px;
     }
@@ -31,8 +28,11 @@
         justify-content: space-between;
     }
     .header__info {
-        &-item {
-            display: none;
+        &-contacts {
+            display: block;
+            & .header__info-item:last-child {
+                padding-left: 0;
+            }
         }
     }
     .btn-hidden {
@@ -63,19 +63,46 @@
     .section-padding {
         padding: 50px 0;
     }
-    .title__big {
+    .section-title {
         margin-bottom: 50px;
-        font-size: 25px;
+    }
+    .title__big {
+        font-size: 30px;
+    }
+    .to-top {
+        width: 60px;
+        height: 60px;
+        bottom: 30px;
+        right: 30px;
+    }
+    .about__info {
+        & img {
+            width: 100%;
+            height: 100%;
+            padding-right: 0;
+        }
     }
 }
 
 // ≥768px
 @include media-breakpoint-down(sm) {
-    .header__info {
+    .main {
+        padding-top: 245px;
+    }
+    .header {
+        background-color: #e6e6e6de;
+    }
+    .header__info-call-btn {
         display: none;
     }
     .header__logo {
-        text-align: center;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
+    .header__info-contacts {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
     }
 
     .menu {
@@ -119,14 +146,39 @@
     .section-padding {
         padding: 30px 0;
     }
-    .title__big {
+    .section-title {
         margin-bottom: 30px;
-        font-size: 22px;
+    }
+    .title__big {
+        font-size: 27px;
     }
 }
 
 // ≥576px
 @include media-breakpoint-down(xs) {
+    .main {
+        padding-top: 305px;
+    }
+    .btn__standart {
+        width: 180px;
+        height: 40px;
+    }
+    .btn__white {
+        width: 180px;
+        height: 40px;
+        font-size: 10px;
+    }
+    .title__big {
+        text-align: center;
+    }
+    .menu,
+    .menu__item{
+        margin: 0 -15px;
+        padding: 0 15px;
+    }
+    .product-divider__btn:before {
+        left: 30px;
+    }
     .main-categories__item {
         width: 100%;
     }
@@ -149,11 +201,26 @@
         }
     }
     .section-padding {
-        padding: 20px 0;
+        padding: 40px 0;
+    }
+    .section-title {
+        margin-bottom: 20px;
     }
     .title__big {
-        margin-bottom: 20px;
-        font-size: 20px;
+        font-size: 25px;
+    }
+    .footer__img {
+        text-align: center;
+    }
+    .header__info-contacts {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__info-item {
+        min-width: 260px;
+    }
+    .articles__title {
+        flex-direction: column;
     }
 }
 
