--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -51,6 +51,11 @@ a {
     height: 40px;
 }
 
+.btn__all-articles {
+    display: block;
+    margin: 0 auto;
+}
+
 .btn-hidden {
     display: none;
 }
@@ -61,9 +66,11 @@ a {
     font-weight: 400;
 }
 
-.hidden {
+.hidden,
+.to-show {
     display: none;
 }
+
 
 .list__item-img {
     position: relative;
@@ -717,8 +724,8 @@ main {
             padding: 0 50px 0 20px;
         }
         &-img {
-            width: 40px;
-            height: 40px;
+            width: 40px !important;
+            height: 40px !important;
             background-color: $standart-color;
             position: absolute;
             right: 0;
