--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -8,6 +8,27 @@ a {
     }
 }
 
+::-webkit-input-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+::-moz-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+:-moz-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+:-ms-input-placeholder {
+    font-family: 'corbel-regular';
+    color: #131d28;
+    font-style: italic;
+}
+
 .btn {
     border: none;
     outline: none;
@@ -51,8 +72,14 @@ a {
     height: 40px;
 }
 
-.btn__all-articles {
+.btn__all-articles,
+.btn__show-more{
     display: block;
+}
+.btn__all-articles {
+    margin-left: 20px;
+}
+.btn__show-more {
     margin: 0 auto;
 }
 
@@ -70,7 +97,6 @@ a {
 .to-show {
     display: none;
 }
-
 
 .list__item-img {
     position: relative;
@@ -108,9 +134,6 @@ a {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    &__item {
-
-    }
 }
 
 .card {
@@ -194,7 +217,7 @@ a {
     }
     &-card {
         max-width: 350px;
-        height: 600px;
+        height: 550px;
         margin-bottom: 25px;
         &:hover {
             border: 1px solid $standart-color;
@@ -221,9 +244,6 @@ a {
 }
 
 .product {
-    &-divider {
-        background-color: white;
-    }
     &-cards {
         justify-content: space-between;
     }
@@ -400,28 +420,8 @@ a {
 }
 
 main {
+    transition: all 0.5s ease;
     padding-top: 125px;
-}
-
-::-webkit-input-placeholder {
-    font-family: 'corbel-regular';
-    color: #131d28;
-    font-style: italic;
-}
-::-moz-placeholder {
-    font-family: 'corbel-regular';
-    color: #131d28;
-    font-style: italic;
-}
-:-moz-placeholder {
-    font-family: 'corbel-regular';
-    color: #131d28;
-    font-style: italic;
-}
-:-ms-input-placeholder {
-    font-family: 'corbel-regular';
-    color: #131d28;
-    font-style: italic;
 }
 
 .section-padding {
@@ -455,7 +455,6 @@ main {
 }
 
 .main {
-
     &-divider {
         background-image: url('../img/_src/main-img.jpg');
         background-size: cover;
@@ -597,6 +596,7 @@ main {
 
 .product {
     &-divider {
+        background-color: white;
         padding-top: 50px;
 
         &__content {
@@ -622,11 +622,11 @@ main {
             }
         }
     }
+
     &-describe {
-        background-color: $gray-color;
+        background-color: #ffffff;
         &__card {
             align-items: flex-start;
-            background-color: #ffffff;
             padding: 30px 0;
             border: none;
 
@@ -653,6 +653,9 @@ main {
         }
         &__sertificat {
             padding-left: 65px;
+            & a {
+                color: initial;
+            }
             & span {
                 display: block;
                 text-decoration: underline;
@@ -682,6 +685,16 @@ main {
         & table tr td {
             padding: 5px 0;
         }
+    }
+
+    &-category {
+        display: flex !important;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    & p {
+        font-family: 'corbel-regular';
+        margin-bottom: 30px;
     }
 }
 
@@ -780,6 +793,9 @@ main {
 
     &-slider {
         padding-top: 80px;
+        &__title {
+            width: 59%;
+        }
     }
 }
 
