--- a/app/scss/_menu.scss
+++ b/app/scss/_menu.scss
@@ -11,14 +11,17 @@
     position: relative;
     display: inline-block;
 
-    &:hover {
-      background-color: #00000021;
+    & a {
+      transition: all 0.5s ease;
+      &:hover {
+        text-shadow: 2px 2px 2px #9c9998;
+        color: $standart-color;
+        text-decoration: none;
+      }
     }
 
-    & a:hover {
-      color: black;
-      text-decoration: none;
-    }
+
+
   }
 
   &__link {
