--- a/app/scss/_menu.scss
+++ b/app/scss/_menu.scss
@@ -14,13 +14,11 @@
     & a {
       transition: all 0.5s ease;
       &:hover {
-        text-shadow: 2px 2px 2px #9c9998;
-        color: $standart-color;
+        text-shadow: 1px 1px 1px #9c9998;
+        color: #8a244c;
         text-decoration: none;
       }
     }
-
-
 
   }
 
