--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -114,6 +114,7 @@ a {
 .breadcrumbs {
     display: flex;
     padding-bottom: 40px !important;
+    padding-top: 40px!important;
     & a {
         font-family: 'corbel-regular';
 
@@ -471,7 +472,7 @@ a {
 
 main {
     transition: all 0.5s ease;
-    padding-top: 125px;
+    padding-top: 118px;
 }
 
 .section-padding {
@@ -508,6 +509,7 @@ main {
     &-divider {
         background-image: url('../img/_src/main-img.jpg');
         background-size: cover;
+        background-position: center;
         &__content {
             max-width: 700px;
             & span {
@@ -654,13 +656,14 @@ main {
 
     &-articles {
         padding-bottom: 70px;
+        padding-top: 0;
     }
 }
 
 .product {
     &-divider {
         background-color: white;
-        padding-top: 50px;
+        padding-top: 0;
 
         &__content {
             max-width: 700px;
@@ -850,6 +853,7 @@ main {
 }
 
 .contacts {
+    padding-top: 0;
     &__info {
         & span {
             margin-bottom: 30px;
