--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -16,6 +16,17 @@
   &-active {
     background-color: #ffffff;
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    padding: 10px 0;
+
+    & .menu {
+      border-top: none;
+      margin-top: 0;
+    }
+
+    & .header__logo {
+      align-items: center;
+      display: flex;
+    }
   }
 
   &__info {
