--- a/app/scss/_common.scss
+++ b/app/scss/_common.scss
@@ -93,7 +93,8 @@ a {
 }
 
 .hidden,
-.to-show {
+.to-show,
+.product-divider__btn-show{
     display: none;
 }
 
@@ -123,6 +124,7 @@ a {
             &:after {
                 content: '•';
                 padding: 0 5px;
+                color: gray;
             }
         }
     }
@@ -166,7 +168,7 @@ a {
 
     &__info {
         padding: 20px;
-
+        max-width: 100%;
         & a {
             color: #000;
 
@@ -203,10 +205,11 @@ a {
             max-height: 150px;
         }
 
-        button {
+        & .btn {
             margin-top: 50px;
             bottom: 20px;
             position: absolute;
+            padding: 17px 70px;
         }
     }
 }
@@ -355,7 +358,7 @@ a {
         margin-bottom: 0;
 
         & a {
-            color: initial;
+            color: black;
             text-decoration: underline;
         }
     }
@@ -430,18 +433,18 @@ a {
     cursor: pointer;
     z-index: 999;
     border-radius: 50%;
-    background-color: #8a244ca8;
+    background-color: rgba(138, 36, 76, 0.6588235294117647);
 
     &__arrow {
         border: solid currentColor;
         border-width: 0 3px 3px 0;
         padding: .2em;
         position: absolute;
-        top: 44%;
-        left: 37%;
+        top: 30px;
+        left: 25px;
         font-size: 40px;
-        -ms-transform: translateX(-50%) translateY(-50%) rotate(-135deg);
-        transform: translateX(-50%) translateY(-50%) rotate(-135deg);
+        -ms-transform: rotate(-135deg);
+        transform: rotate(-135deg);
         -webkit-transform: rotate(-135deg);
         z-index: 1000;
         color: white;
@@ -460,7 +463,7 @@ a {
     &:before {
         width: 63px;
         height: 63px;
-        background-color: #8a244c6b;
+        background-color: rgba(138, 36, 76, 0.4196078431372549);
     }
 
     &:after {
@@ -501,6 +504,7 @@ main {
         margin: 0;
         & img {
             width: 100%;
+            height: 100%;
         }
     }
 }
@@ -512,10 +516,11 @@ main {
         background-position: center;
         &__content {
             max-width: 700px;
-            & span {
+            & h1 {
                 font-size: 40px;
                 margin-bottom: 20px;
                 font-family: 'lora-regular';
+                font-weight: 400;
             }
 
             & p {
@@ -537,7 +542,12 @@ main {
             }
         }
         &__btn {
-            margin-top: 70px;   
+            margin-top: 70px;
+            padding: 17px 68px;
+            display: block;
+            &:hover {
+                color: white;
+            }
         }
     }
 
@@ -656,14 +666,15 @@ main {
 
     &-articles {
         padding-bottom: 70px;
-        padding-top: 0;
+        padding-top: 0 !important;
     }
 }
 
 .product {
     &-divider {
         background-color: white;
-        padding-top: 0;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
 
         &__content {
             max-width: 700px;
@@ -671,7 +682,10 @@ main {
         }
 
         &__btn {
-
+            padding: 20px 50px;
+            &:hover {
+                color: white !important;
+            }
         }
     }
 
@@ -706,7 +720,7 @@ main {
         &__sertificat {
             padding-left: 65px;
             & a {
-                color: initial;
+                color: black;
             }
             & span {
                 display: block;
@@ -719,6 +733,9 @@ main {
                 width: 60px;
                 height: 50px;
             }
+        }
+        &__first {
+            padding-bottom: 45px;
         }
 
         & table tr:first-child {
@@ -752,6 +769,7 @@ main {
 }
 
 .sertificats {
+    padding: 0 0 70px;
     &-cards {
         justify-content: space-between;
     }
@@ -853,7 +871,7 @@ main {
 }
 
 .contacts {
-    padding-top: 0;
+    padding-top: 0 !important;
     &__info {
         & span {
             margin-bottom: 30px;
@@ -875,6 +893,7 @@ main {
 }
 
 .about {
+    padding-top: 0;
 
     & p,
     & li {
@@ -925,9 +944,9 @@ main {
                 position: absolute;
                 left: 0;
                 background-image: url("../img/_src/sprite.png");
-                width: 17px;
-                height: 19px;
-                background-position: -109px -4px;
+                width: 22px;
+                height: 21px;
+                background-position: -107px -3px;
             }
         }
     }
@@ -954,7 +973,7 @@ main {
         border-right: none;
         border-left: none;
         position: relative;
-        margin-top: 50px;
+        margin-top: 20px;
         cursor: pointer;
         & video{
             width: 650px;
