--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -18,7 +18,7 @@
 // ≥992px
 @include media-breakpoint-down(md) {
     .main {
-        padding-top: 125px;
+        padding-top: 185px;
     }
     .main-divider {
         padding: 50px 0;
@@ -45,14 +45,11 @@
     }
     .header__info {
         &-contacts {
-            display: block;
+            display: block !important;
             & .header__info-item:last-child {
                 padding-left: 0;
             }
         }
-    }
-    .header__mail {
-        margin-left: 20px;
     }
     .footer__img {
         text-align: center;
@@ -103,6 +100,11 @@
         height: 60px;
         bottom: 30px;
         right: 30px;
+
+        &__arrow {
+            top: 25px;
+            left: 21px;
+        }
     }
     .about__info {
         & img {
@@ -118,20 +120,21 @@
 
 // ≥768px
 @include media-breakpoint-down(sm) {
-    .main {
-        padding-top: 180px;
+
+    main,
+    .main{
+        padding-top: 65px;
     }
+
     .header {
-        background-color: #ffffff;
+        background-color: #fffffff2;
         padding: 5px 0 5px;
     }
     .header__info-call-btn {
         display: none;
     }
     .header__logo {
-        justify-content: center;
-        padding-top: 10px;
-        padding-bottom: 0;
+        display: none !important;
     }
     .articles__title {
         padding-bottom: 40px;
@@ -189,6 +192,14 @@
     .section-title {
         margin-bottom: 30px;
     }
+
+    .product-describe__first {
+        padding-bottom: 30px;
+    }
+
+    .about__video video {
+        width: 100%;
+    }
 }
 
 // ≥576px
@@ -221,6 +232,11 @@
     }
     .to-hidden {
         display: none;
+    }
+    .product-divider__btn-show {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 30px;
     }
     .menu,
     .menu__item{
@@ -288,6 +304,18 @@
     }
     .next-arrow {
         right: 0;
+    }
+
+    .card__info .btn {
+        padding: 10px 46px;
+    }
+
+    .main-about__btn {
+        padding: 10px 49px;
+    }
+
+    .btn__link {
+        padding: 10px 49px;
     }
 }
 
